src/test/ui/regions/regions-wf-trait-object.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/regions-wf-trait-object.rs:17:5
   |
LL |     x: Box<TheTrait<'a>+'b> //~ ERROR E0478
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime 'b as defined on the struct at 16:15
  --> $DIR/regions-wf-trait-object.rs:16:15
   |
LL | struct Foo<'a,'b> {
   |               ^^
note: but lifetime parameter must outlive the lifetime 'a as defined on the struct at 16:12
  --> $DIR/regions-wf-trait-object.rs:16:12
   |
LL | struct Foo<'a,'b> {
   |            ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0478`.
